[gd_scene load_steps=5 format=3 uid="uid://corw37r5uvyj8"]

[ext_resource type="Script" uid="uid://cdfsee4bf0j22" path="res://Scripts/audio_manager.gd" id="1_sm2tf"]
[ext_resource type="AudioStream" uid="uid://cecq7cl7occg" path="res://Assets/Sounds/SFX/GUI/on_hover.wav" id="2_qixve"]
[ext_resource type="AudioStream" uid="uid://bx1ks1igdipd8" path="res://Assets/Sounds/SFX/GUI/on_click.mp3" id="3_0hehx"]
[ext_resource type="AudioStream" uid="uid://3w6mwbr26gek" path="res://Assets/Sounds/Music/MenuMusic.mp3" id="4_qixve"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_sm2tf")

[node name="Sfx" type="Node" parent="."]

[node name="OnHoverBTN" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("2_qixve")
volume_db = -7.5
bus = &"SFX"

[node name="OnClickBTN" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource("3_0hehx")
volume_db = -5.445
bus = &"SFX"

[node name="Music" type="Node" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Music"]
stream = ExtResource("4_qixve")
volume_db = -17.789
bus = &"Music"
playback_type = 1
parameters/looping = true
