extends Node
@onready var on_hover_btn: AudioStreamPlayer = $Sfx/OnHoverBTN
@onready var on_click_btn: AudioStreamPlayer = $Sfx/OnClickBTN
@onready var menu_music: AudioStreamPlayer = $Music/MenuMusic
@onready var fiammifero_sfx: AudioStreamPlayer = $Sfx/FiammiferoSfx
@onready var candela_sfxloop: AudioStreamPlayer = $Sfx/CandelaSfxloop
@onready var soffio_sfx: AudioStreamPlayer = $Sfx/SoffioSfx
